--- a/form.html
+++ b/form.html
@@ -51,10 +51,11 @@
          <button>Submit</button>
     <br>
     <br>
-    <a href="./home.html">Back to main page</a>
+    <a href="index.html">Back to main page</a>
     </form> 
 </center>
     
       
 </body>
+
 </html>
