--- a/table.html
+++ b/table.html
@@ -11,7 +11,7 @@
             <h1>Create a Table which looks like this &#128071</h1>
             <br>
     </center>
-    <a href="./home.html">Go Back</a>
+    <a href="index.html">Go Back</a>
     <center>
     <table cellspacing="1">
         <tr>
@@ -106,4 +106,5 @@
     </table>
     </center>
 </body>
+
 </html>
