--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Lists in HTML</h1>
-       <a href="./home.html">Go Back</a>
+       <a href="index.html">Go Back</a>
     <ol type="a">
       <li>Sample</li>
       <li>Sample</li>
@@ -30,4 +30,5 @@
     <a href="./nestedlist.html">Nested List</a>
   </body>
 </html>
+
 
