--- a/video.html
+++ b/video.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-        <a href="./home.html">Go Back</a>
+        <a href="index.html">Go Back</a>
     <center>
      
       <video
@@ -19,4 +19,5 @@
       ></video>
     </center>
   </body>
+
 </html>
